# OS

./: .gitignore  README.md
kollok1/: README.md  questions.docx  questions.md
kollok1/src/array/: CMakeLists.txt  array.cpp  array.hpp  test.cpp
kollok1/src/factorial/: CMakeLists.txt  FACTORIAL.cpp  factorial.hpp  test.cpp
kollok1/src/list/: CMakeLists.txt  list.cpp  test.cpp
kollok2/: AdvancedSingletone.cpp  CMakeLists.txt  README.md
kollok3/: README.md  questions.docx  questions.md
lab1/: CMakeLists.txt  Creator.cpp  Reporter.cpp  employee.h  main.cpp
lab2/: CMakeLists.txt
lab2(2)/: CMakeLists.txt  main.cpp
lab2(2)/main_program/: main.cpp  thread_utils.cpp  thread_utils.h
lab2(2)/tests/: catch_main.cpp  test_threads.cpp
lab2/src/: CriticalSectionGuard.h  data.h  functions.cpp  functions.h
lab3/: CMakeLists.txt  README.md  main.cpp
lab3/src/: main.cpp  marker_utils.cpp  marker_utils.h
lab3/tests/: test_marker_utils.cpp
lab4/: CMakeLists.txt  README.md
lab4/src/: receiver.cpp  sender.cpp
lab4/tests/: test_app.cpp
